--- a/css/recipe.css
+++ b/css/recipe.css
@@ -68,6 +68,7 @@ table th{
   margin-top: 10vh;
 }
 
+
 @media  (max-width: 900px) {
   .main-container{
     margin-top: 20vh;
@@ -79,10 +80,6 @@ table th{
   .food-image-cell{
     grid-column-start: 1;
     grid-column-end: 1;
-  }
-
-  .food-image{
-    height: 60%;
   }
 
   .ingredients-cell{
@@ -109,3 +106,9 @@ table th{
     max-width: 9.5rem;
   }
 }
+
+@media  (max-width: 600px) {
+  .food-image{
+    height: 60%;
+  }
+  }
