--- a/css/recipe.css
+++ b/css/recipe.css
@@ -70,6 +70,11 @@ table th{
 
 
 @media  (max-width: 900px) {
+
+  h2{
+    font-size: 2rem;
+  }
+
   .main-container{
     margin-top: 20vh;
     display: grid;
@@ -111,4 +116,5 @@ table th{
   .food-image{
     height: 60%;
   }
+
   }
