--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -15,9 +15,9 @@
     <div class="navbar-links">
       
         <ul>
-            <li><a id="home-button" href="./index.html">HOME</a></li>
+            <li><a id="home-button" href="index.html">HOME</a></li>
             <li><a href="appetizers.html">PŘEDKRMY</a></li>
-            <li><a href="main dish.html">HLAVNÍ CHODY</a></li>
+            <li><a href="main_dish.html">HLAVNÍ CHODY</a></li>
             <li><a href="desserts.html">DEZERTY</a></li>
             <li><a href="#">VZOROVÁ MENU</a></li>
         </ul>
