--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -16,7 +16,7 @@
       
         <ul>
             <li><a id="home-button" href="index.html">HOME</a></li>
-            <li><a href="appetizers.html">PŘEDKRMY</a></li>
+            <li><a href="appetizers.html">SNÍDANĚ & PŘEDKRMY</a></li>
             <li><a href="main_dish.html">HLAVNÍ CHODY</a></li>
             <li><a href="desserts.html">DEZERTY</a></li>
             <li><a href="#">VZOROVÁ MENU</a></li>
@@ -30,7 +30,7 @@
       
     <ul>
         <li><a id="home-button" href="index.html">HOME</a></li>
-        <li><a href="appetizers.html">PŘEDKRMY</a></li>
+        <li><a href="appetizers.html">SNÍDANĚ & PŘEDKRMY</a></li>
         <li><a href="main_dish.html">HLAVNÍ CHODY</a></li>
         <li><a href="desserts.html">DEZERTY</a></li>
         <li><a href="#">VZOROVÁ MENU</a></li>
