--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,5 +1,4 @@
 <footer class="footer border-line">
     <p>©2024 Všechna práva vyhrazena</p>
-    <a class="footer-a" href="...">Kontaktujte nás</a>
-    <a class="footer-a" href="https://www.jiriklatovsky.eu/">Web Design</a>
+    <a class="footer-a" href="https://www.jikl-coding.com/" target="_blank">Vytvořil jikl-coding.com</a>
 </footer>
