nový recept na cheesecake + úprava receptů, sjednocení do neformální du formy

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,4 +1,4 @@
 <footer class="footer border-line">
-    <p>©2024 Všechna práva vyhrazena</p>
+    <p>©<span id="year"></span> Všechna práva vyhrazena</p>
     <a class="footer-a" href="https://www.jikl-coding.com/" target="_blank">Vytvořil jikl-coding.com</a>
 </footer>
