--- a/css/styles.css
+++ b/css/styles.css
@@ -652,3 +652,15 @@ table th {
 .navigation-arrows button:hover {
   background-color: #e0e0e0;
 }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  white-space: nowrap;
+  border: 0;
+}
